k8s/ing.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-passthrough":"true"},"name":"orderer-ingress","namespace":"hlf"},"spec":{"rules":[{"host":"orderer1.07bf7588a5e5430fb734.westus.aksapp.io","http":{"paths":[{"backend":{"serviceName":"orderer1","servicePort":7050}}]}},{"host":"orderer2.07b [...]
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    creationTimestamp: "2022-04-15T12:37:07Z"
    generation: 1
    name: orderer-ingress
    namespace: hlf
    resourceVersion: "2769"
    uid: 72e22dee-25e7-4241-b988-868895511085
  spec:
    rules:
    - host: orderer1.07bf7588a5e5430fb734.westus.aksapp.io
      http:
        paths:
        - backend:
            service:
              name: orderer1
              port:
                number: 7050
          pathType: ImplementationSpecific
    - host: orderer2.07bf7588a5e5430fb734.westus.aksapp.io
      http:
        paths:
        - backend:
            service:
              name: orderer2
              port:
                number: 7050
          pathType: ImplementationSpecific
    - host: orderer3.07bf7588a5e5430fb734.westus.aksapp.io
      http:
        paths:
        - backend:
            service:
              name: orderer3
              port:
                number: 7050
          pathType: ImplementationSpecific
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
